--- a/main.css
+++ b/main.css
@@ -578,6 +578,17 @@ footer {
   }
 }
 
+ 
+@media only screen and (max-width: 1183px) {
+  .left-side-nav .link {
+    padding: 1rem 0rem 0rem 0.4rem;
+  }
+  .left-side-nav .link img {
+    margin-right: 0.3rem;
+  }
+}
+
+
 @media only screen and (max-width: 670px) {
   .grid {
     display: inline-block;
@@ -657,8 +668,8 @@ footer {
     padding: 1rem 0rem 0rem 0rem;
     width: 100%;
   }
-  .card-status{
-    margin-left:0rem ;
+  .card-status {
+    margin-left: 0rem;
     width: 100%;
   }
 }
